<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group>
        <item android:id="@+id/star_reward"
            android:icon="@drawable/icon_star"
            android:title="@string/star" />
        <item android:id="@+id/partner_area"
            android:icon="@drawable/partner_area"
            android:title="@string/partner_area"/>
        <item android:id="@+id/settings"
            android:icon="@drawable/ic_add_settings"
            android:title="@string/settings" />
        <item android:id="@+id/about"
            android:icon="@drawable/ic_add_info"
            android:title="@string/about" />
    </group>

    <group android:id="@+id/group_menu">
        <item android:id="@+id/share"
            android:icon="@drawable/icon_share"
            android:title="@string/share"/>
        <item android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>