<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginBottom="10dp"
        style="@style/LoginTextInputLayoutProfile">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_bonus"
        android:layout_marginBottom="10dp"
        style="@style/LoginTextInputLayoutProfile">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/total_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bank"
        android:layout_marginBottom="10dp"
        style="@style/LoginTextInputLayoutProfile">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomor_rekening_bank"
        android:layout_marginBottom="10dp"
        style="@style/LoginTextInputLayoutProfile">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bank_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_rekening_bank"
        android:layout_marginBottom="10dp"
        style="@style/LoginTextInputLayoutProfile">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/withdrawal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nominal_withdrawal"
        android:layout_marginBottom="10dp"
        style="@style/OutlinedRoundedBox"
        app:hintTextColor="@color/inputLoginText"
        android:textColorHint="@color/inputLoginText"
        app:boxBackgroundColor="@color/inputLoginBackground"
        app:hintEnabled="false"
        android:layout_marginHorizontal="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/withdrawal_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center"
            android:enabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/withdrawal_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
</LinearLayout>